k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  strategy: {}
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      imagePullSecrets:
      - name: access-docker-hub
      containers:
      - image: sanketswani121995/portfolio:v2.0
        name: portfolio
        ports:
        - containerPort: 80
        resources: {}
status: {}
