k8s/nodePortSvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio
  name: portfolio
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30007
  type: NodePort
  selector:
    app: portfolio
status:
  loadBalancer: {}
